--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is a swiggy ui clone for practice purpose only">
     <meta name="author" content="PRayansh PAstor">
-    <link rel="shortcut icon" href="img/favicon.png" type="image/png">
+    <link rel="icon" href="/img/favicon.png" type="image/png">
     <title>Swiggy - Order Tasty Food Online</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
