--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is a swiggy ui clone for practice purpose only">
     <meta name="author" content="PRayansh PAstor">
+    <meta name="google-site-verification" content="yZvLnDC3la8Kc0FpqY2ElAvqfC83oCsbiI98f4zdVvk" />
     <link rel="icon" href="/img/favicon.png" type="image/png">
     <title>Swiggy - Order Tasty Food Online</title>
     <link rel="stylesheet" href="css/styles.css">
