--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@
     <span>By clicking on Login, I accept the Terms & Conditions & Privacy Policy</span>
 </div>
         <!-- use img/bg.png as background -->
-        <p>Order food. Discover best </p>
+    <!-- 🔥 REPLACE THIS SECTION - Add hero-text wrapper -->
+    <div class="hero-text">
+        <p>Order food. Discover best</p>
         <p>restaurants. Swiggy it!😋</p>
+    </div>
         <div class="search-row">
             <div class="input-container">
                 <span class="icon">📍</span>
@@ -58,10 +61,10 @@
         <div class="banner-images">
             <img class="sc-eeDRCY duCsUr"
                 src="https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto/MERCHANDISING_BANNERS/IMAGES/MERCH/2024/7/23/faa6d07d-e43c-4aa1-90d8-eda6c14e467d_Food2BU.png"
-                alt="Food" height="380">
+                alt="Food">
             <img class="sc-eeDRCY duCsUr"
                 src="https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto/MERCHANDISING_BANNERS/IMAGES/MERCH/2024/7/23/8fa21ee7-affd-43a4-b14d-978c9b372159_DO2BU.png"
-                alt="DO" height="380">
+                alt="DO">
         </div>
        
     </main>
